Bug 76780 - REPORTBUILDER: Maximum page-height, shown as "Position Y", is limited by the value for page-width without margins.
Summary: REPORTBUILDER: Maximum page-height, shown as "Position Y", is limited by the ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: BSA target:4.5.0 target:4.4.0.2 targe...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-29 18:55 UTC by R. Broersma
Modified: 2015-01-06 16:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screendump (title field treasurer positioned on19cm and at position Y 15,20 cm (395.99 KB, image/jpeg)
2014-03-29 18:55 UTC, R. Broersma
Details
Report filling one whole page (33.41 KB, application/vnd.sun.xml.base)
2014-03-30 18:56 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description R. Broersma 2014-03-29 18:55:26 UTC
Created attachment 96598 [details]
Screendump (title field treasurer positioned on19cm and at position Y 15,20 cm

The positioning of title fields or text boxes can not be more than 15.20 cm, except by dragging with the mouse, but moving that way is very unstable.
Also the increase of the fields with the mouse causes a complete crash of libreoffice base.
              
Operating System: Windows 7
Version: 4.1.5.3 release
Comment 1 Robert Großkopf 2014-03-30 17:37:55 UTC
You write about 15,20 cm. Are there any other areas in your report?

Might be this is the same as reported in Bug52126. This bug has been inherited by OOo.
Comment 2 R. Broersma 2014-03-30 17:59:40 UTC
In both reports, there is a page higher than A4 (297mm). I want to create
only letters and do not use more than one page per letter. So it seems to
me that it's not the same problem, but my main language is not English, so
it may be that I do not quite understand those reports.
All the elements that I want to put under 15.2 cm I can only move with the
mouse.

On the other hand, when I want to extend an element with the mouse then
crashes libreoffice and close itself.

Rob


2014-03-30 19:37 GMT+02:00 <bugzilla-daemon@freedesktop.org>:

> robert@familiegrosskopf.de changed bug 76780<https://bugs.freedesktop.org/show_bug.cgi?id=76780>
>  What Removed Added  CC   robert@familiegrosskopf.de  See Also
> https://bugs.freedesktop.org/show_bug.cgi?id=52126
>
>  *Comment # 1 <https://bugs.freedesktop.org/show_bug.cgi?id=76780#c1> on
> bug 76780 <https://bugs.freedesktop.org/show_bug.cgi?id=76780> from
> robert@familiegrosskopf.de <robert@familiegrosskopf.de> *
>
> You write about 15,20 cm. Are there any other areas in your report?
>
> Might be this is the same as reported in Bug52126 <https://bugs.freedesktop.org/show_bug.cgi?id=52126>. This bug has been inherited
> by OOo.
>
>  ------------------------------
> You are receiving this mail because:
>
>    - You reported the bug.
>
>
Comment 3 Robert Großkopf 2014-03-30 18:56:42 UTC
Created attachment 96627 [details]
Report filling one whole page

Open the database.
Open the report. 
The report shows text over the whole page - don't know why there is one empty page added ...
Open the report for editing.
Look at the fields at the bottom of the report, for example the label "Robert".
If you mark this label it shows at the Properties → General at the right of the window: Position Y = 17,00 cm (not 15,20 cm, as you described - so I asked if there are other areas in your report like groups or borders ...)
The real position is at the bottom of the page, nearly 29 cm.

You could position the elements there better by the arrow-keys. In earlier version of LO the positioning with the mouse works also without any problems here.

If you see the same let us change the title of this bug and set it to new.
Comment 4 Robert Großkopf 2014-03-31 13:59:26 UTC
I have tested a little bit more. Looking where the height (in my report) could be limited by. 17cm is exact the width of a A4-paper with 2cm margins on the left an on the right (21cm - 2*2cm = 17cm). When I set the margin to 1cm on the left and 1cm on the right the Position Y is changed at the maximum to 19cm. Seems the height of Position Y is limited by the width of the page.

When I have a look at your attachment https://bugs.freedesktop.org/attachment.cgi?id=96598 it's the same. Your document has a large border on the left and the free space in the width is exactly 15.2cm.

I will change the title and set this bug to new.

I cold confirm this bug for the first version of LO, so I set the version to "Inherited From OOo".
Comment 5 Commit Notification 2014-12-18 05:41:31 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a5891450c38de50d7d48d78e9b398f07cf94d0a

fdo#76780 don't limit PositionY to available width

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-12-18 05:48:30 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=30ccc435c33e678092971aaebf0973c1ee4e770c&h=libreoffice-4-4

fdo#76780 don't limit PositionY to available width

It will be available in 4.4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-01-06 16:04:09 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0d63a64ecaeb4517c710876b1170e28ae71a44a2&h=libreoffice-4-3

fdo#76780 don't limit PositionY to available width

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.