fdo#76780 don't limit PositionY to available width

Change-Id: I3a429d0a6f771f6bfde2331ddc8544c92d8147f7
Reviewed-on: https://gerrit.libreoffice.org/13517
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>